@@ -59,6 +59,7 @@
 	<trim src="jscripts/tiny_mce/plugins/advimage/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/advimage/editor_plugin.js" />
 	<trim src="jscripts/tiny_mce/plugins/advlink/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/advlink/editor_plugin.js" />
 	<trim src="jscripts/tiny_mce/plugins/emotions/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/emotions/editor_plugin.js" />
+	<trim src="jscripts/tiny_mce/plugins/example/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/example/editor_plugin.js" />
 	<trim src="jscripts/tiny_mce/plugins/flash/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/flash/editor_plugin.js" />
 	<trim src="jscripts/tiny_mce/plugins/iespell/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/iespell/editor_plugin.js" />
 	<trim src="jscripts/tiny_mce/plugins/insertdatetime/editor_plugin_src.js" dest="jscripts/tiny_mce/plugins/insertdatetime/editor_plugin.js" />
