@@ -38,7 +38,7 @@
 					if (dom.hasClass(e, 'mceTmpl')) {
 						each(dom.select('*', e), function(e) {
 							if (dom.hasClass(e, ed.getParam('template_mdate_classes').replace(/\s+/g, '|')))
-								e.innerHTML = t._getDateTime(new Date(), tinyMCE.getParam("template_mdate_format", ed.getLang("template.mdate_format")));
+								e.innerHTML = t._getDateTime(new Date(), ed.getParam("template_mdate_format", ed.getLang("template.mdate_format")));
 						});
 
 						t._replaceVals(e);
@@ -76,11 +76,11 @@
 			each(dom.select('*', el), function(n) {
 				// Replace cdate
 				if (hasClass(n, ed.getParam('template_cdate_classes', 'cdate').replace(/\s+/g, '|')))
-					n.innerHTML = t._getDateTime(new Date(), tinyMCE.getParam("template_cdate_format", ed.getLang("template.cdate_format")));
+					n.innerHTML = t._getDateTime(new Date(), ed.getParam("template_cdate_format", ed.getLang("template.cdate_format")));
 
 				// Replace mdate
 				if (hasClass(n, ed.getParam('template_mdate_classes', 'mdate').replace(/\s+/g, '|')))
-					n.innerHTML = t._getDateTime(new Date(), tinyMCE.getParam("template_mdate_format", ed.getLang("template.mdate_format")));
+					n.innerHTML = t._getDateTime(new Date(), ed.getParam("template_mdate_format", ed.getLang("template.mdate_format")));
 
 				// Replace selection
 				if (hasClass(n, ed.getParam('template_selected_content_classes', 'selcontent').replace(/\s+/g, '|')))
